kubernetes/apps/flux-system/webhooks/app/github/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: ${SECRET_PUBLIC_DOMAIN1}
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: traefik-public
  rules:
  - host: &host "flux.webhook.${SECRET_PUBLIC_DOMAIN1}"
    http:
      paths:
        - path: /hook/
          pathType: Prefix
          backend:
            service:
              name: webhook-receiver
              port:
                number: 80
  tls:
    - hosts:
        - *host
      secretName: webhook-${SECRET_PUBLIC_DOMAIN1//./-}-tls
